[tool.poetry]
name = "city-api"
version = "0.1.0"
description = "API to get city's weather, last mentioned article in NYT and city's info"
authors = ["Gipss <gissa.dmtr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
httpx = "^0.22.0"
python-dotenv = "^0.19.2"
orjson = "^3.6.7"
pycountry = "^22.3.5"
redis = "^4.2.0"
aioredis = "^2.0.1"
hiredis = "^2.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.930"
types-redis = "^4.1.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
